applications/frigate/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: frigate
  labels:
    name: frigate
